@@ -42,7 +42,7 @@
     <application android:name="net.yura.android.AndroidMeApp"
 		         android:icon="@drawable/icon"
 		         android:label="@string/app_name"
-		         android:theme="@style/android:Theme.Light.NoTitleBar"
+		         android:theme="@style/NoActionBar.Light.DarkDialog"
 		         android:hardwareAccelerated="true"
 		         android:debuggable="true"
         >
